# cliv-ai-agent

./: .gitignore  LICENSE  README.MD  add.py  fibonacci.py  hello.py  main.py  prime_checker.py  pyproject.toml
ai_cli/: agent.py  cli.py  config.py
ai_cli/tools/: base.py  git_diff.py  search_codebase.py
cliv/: agent.py  cli.py  config.py
cliv/tools/: base.py  edit_file.py  list_files.py  read_file.py  remove_file.py  run_test.py
runbook/: 01_basic_script.py  02_agent_class.py  03_define_tools.py  04_implement_tool_execution.py  05_add_chat_method.py  06_create_interactive_cli.py  07_add_personality.py  goodbye.txt  new file.txt
tests/: conftest.py  test_agent.py  test_tools.py
