[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ai-cli-assistant"
version = "0.1.0"
description = "A conversational AI agent that can read, list, and edit files."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "groq",
    "numpy>=2.4.6",
    "ollama>=0.3.0",
    "pydantic",
    "pytest>=9.1.0",
    "python-dotenv>=1.2.2",
    "rich>=15.0.0",
]

[project.scripts]
ai-assist = "ai_cli.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["ai_cli"]
